@@ -1,3 +1,11 @@
+2021-06-19 Marek M. Cel <marekcel@marekcel.pl>
+    
+    * reading missions data for GUI
+    
+    * WidgetMissions
+
+
+
 2021-06-12 Marek M. Cel <marekcel@marekcel.pl>
     
     * cleanup
